refactored and completed system context display

--- a/_includes/functions/checks/check-functionalRequirement.html
+++ b/_includes/functions/checks/check-functionalRequirement.html
@@ -9,6 +9,8 @@
 		myErrorString="" myWarningString="" %}
 {% include /functions/checks/generic/check-goal-refs.html myArtefact=artefact
 		myErrorString=errorString myWarningString=warningString %}
+{% include /functions/checks/generic/check-sources.html myArtefact=artefact
+		myErrorString=errorString myWarningString=warningString %}
 
 {% assign errorList = errorString | split: ";" %}
 {% assign warningList = warningString | split: ";" %}
