--- a/_includes/functions/checks/check-goal.html
+++ b/_includes/functions/checks/check-goal.html
@@ -7,6 +7,8 @@
 
 {% include /functions/checks/generic/check-generic-aspects.html myArtefact=artefact
 		myErrorString="" myWarningString="" %}
+{% include /functions/checks/generic/check-sources.html myArtefact=artefact
+		myErrorString=errorString myWarningString=warningString %}
 
 {% assign errorList = errorString | split: ";" %}
 {% assign warningList = warningString | split: ";" %}
@@ -22,7 +24,7 @@
 		{% assign warningList = warningList | push: out_msg %}
 	{% endif %}
 {% else %}
-	{% include /functions/define-message.html ignore=artefact.ignore msgno="e531" msg="Titel fehlt!" %}
+	{% include /functions/define-message.html ignore=artefact.ignore msgno="e791" msg="Titel fehlt!" %}
 	{% assign errorList = errorList | push: out_msg %}
 {% endif %}
 
