--- a/_layouts/systemContextElement.html
+++ b/_layouts/systemContextElement.html
@@ -3,32 +3,23 @@ layout: default
 ---
 
 {% include /functions/get-artefact-name.html myArtefact=page myIdFormat="postfixWithBrackets" %}
-<h1>Systemkontext-Element {{ artefactName }}</h1>
+{% include /functions/get-system-context-subtype.html mySystemContextElement=page %}
+<h1>Systemkontext: {{ subTypeString }} {{ artefactName }}</h1>
 
 <dl>
-    <dt>Acronym</dt>
-    <dd>{{ page.acronym }}</dd>
+    <dt>Autor(en)</dt>
+    {% include /functions/resolve-names.html myResponsible=page.responsible %}
+    <dd>{{ responsibleString }}</dd>
 
-    <!-- 
-    <dt>Name</dt>
-    <dd>{{ page.name }}</dd> 
-    -->
-
-
-    {% if page.todos and page.todos.size > 0 %}
-        {% assign todo_counter = 0 %}
-        <dt>Todos</dt>
-        {% for entry in page.todos %}
-            {% assign todo_counter = todo_counter | plus: 1 %}
-            <dd>({{ todo_counter }}) {{ entry }}</dd>
-        {% endfor %}
-    {% endif %}
-
-    <dt>History</dt>
-    {% for entry in page.history %}
-        <dd>({{ entry[0]}}) &nbsp; {{ entry[1].date }} - {{ entry[1].comment }}</dd>
+    <dt>Quellen</dt>
+    {% for source in page.source %}
+        <dd>{{ source }}</dd>
     {% endfor %}
 
+    {% include /functions/print-history.html myArtefact=page %}
+
+    {% include /functions/checks/check-systemContextElement.html myArtefact=page %}
+    {% include /functions/print-detailed-check-messages.html errors=errorString warnings=warningString todos=page.todo %}
 </dl>
 
 
