overhauling scenario & persona

--- a/_includes/functions/checks/check-persona.html
+++ b/_includes/functions/checks/check-persona.html
@@ -16,7 +16,9 @@
 
 {% comment %} ***** Error/Warning Numbers 590 - 609 reserved for persona **** {% endcomment %}
 
-{% comment %}---------- ??? add here ??? -----------{% endcomment %}
+{% comment %}---------- age -----------{% endcomment %}
+
+
 
 {% assign errorString = errorList | join: ";" %}
 {% assign warningString = warningList | join: ";" %}
