--- a/_includes/functions/checks/check-useCaseDiagram.html
+++ b/_includes/functions/checks/check-useCaseDiagram.html
@@ -14,7 +14,13 @@
 
 {% comment %} ***** Error/Warning Numbers 650 - 669 reserved for UC Diagram **** {% endcomment %}
 
-{% comment %}---------- ??? add here ??? -----------{% endcomment %}
+{% comment %}---------- functionalRequirement -----------{% endcomment %}
+
+{% comment %}---------- useCases -----------{% endcomment %}
+
+{% comment %}---------- useCasesDetailedWithScenario -----------{% endcomment %}
+
+{% comment %}---------- diagram -----------{% endcomment %}
 
 {% assign errorString = errorList | join: ";" %}
 {% assign warningString = warningList | join: ";" %}
