refactored the references

--- a/_includes/functions/checks/check-functionalRequirement.html
+++ b/_includes/functions/checks/check-functionalRequirement.html
@@ -7,8 +7,9 @@
 
 {% include /functions/checks/generic/check-generic-aspects.html myArtefact=artefact
 		myErrorString="" myWarningString="" %}
-{% include /functions/checks/generic/check-goal-refs.html myArtefact=artefact
-		myErrorString=errorString myWarningString=warningString %}
+{% include /functions/checks/generic/check-generic-refs.html myArtefact=artefact myCheckedRef=artefact.goals
+		myCheckedRefType="goal" asList=true emptyMeansError=true
+		myPurpose="Ziel-Referenz" myErrorString=errorString myWarningString=warningString %}
 {% include /functions/checks/generic/check-sources.html myArtefact=artefact
 		myErrorString=errorString myWarningString=warningString %}
 
