--- a/_includes/functions/checks/generic/check-generic-refs.html
+++ b/_includes/functions/checks/generic/check-generic-refs.html
@@ -2,7 +2,7 @@
 {% assign localCheckedRef = include.myCheckedRef %}
 {% assign localCheckedRefType = include.myCheckedRefType %}
 {% assign asList = include.asList %}
-{% assign asError = include.asError %}
+{% assign asError = include.emptyMeansError %}
 {% assign purpose = include.myPurpose %}
 {% assign errorString = include.myErrorString %}
 {% assign warningString = include.myWarningString %}
