--- a/_includes/functions/checks/check-stakeholder.html
+++ b/_includes/functions/checks/check-stakeholder.html
@@ -7,9 +7,9 @@
 
 {% include /functions/checks/generic/check-generic-aspects.html myArtefact=artefact
         myErrorString="" myWarningString="" %}
-{% assign stakeholderRoleRef = artefact.stakeholderRole %}
-{% include /functions/checks/generic/check-stakeholderRole-refs.html myStakeholderRoleRef=stakeholderRoleRef
-        myAsList=true myPurpose="Stakeholder-Rolle" myErrorString=errorString myWarningString=warningString %}
+{% include /functions/checks/generic/check-generic-refs.html myArtefact=artefact myCheckedRef=artefact.stakeholderRole
+        myCheckedRefType="stakeholderRole" asList=true emptyMeansError=true
+        myPurpose="Stakeholder-Rolle" myErrorString=errorString myWarningString=warningString %}
 
 {% assign errorList = errorString | split: ";" %}
 {% assign warningList = warningString | split: ";" %}
