--- a/_includes/functions/checks/check-userStory.html
+++ b/_includes/functions/checks/check-userStory.html
@@ -7,6 +7,12 @@
 
 {% include /functions/checks/generic/check-generic-aspects.html myArtefact=artefact
 		myErrorString="" myWarningString="" %}
+{% include /functions/checks/generic/check-generic-refs.html myArtefact=artefact myCheckedRef=artefact.asA
+		myCheckedRefType="stakeholderRole" asList=false emptyMeansError=true
+		myPurpose="'asA'" myErrorString=errorString myWarningString=warningString %}
+{% include /functions/checks/generic/check-generic-refs.html myArtefact=artefact myCheckedRef=artefact.functionalRequirement
+		myCheckedRefType="functionalRequirement" asList=false emptyMeansError=true
+		myPurpose="zugehörige funktionale Anforderung" myErrorString=errorString myWarningString=warningString %}
 
 {% assign errorList = errorString | split: ";" %}
 {% assign warningList = warningString | split: ";" %}
@@ -14,7 +20,44 @@
 
 {% comment %} ***** Error/Warning Numbers 690 - 709 reserved for User Story **** {% endcomment %}
 
-{% comment %}---------- ??? add here ??? -----------{% endcomment %}
+{% comment %}---------- title -----------{% endcomment %}
+{% if artefact.title %}
+	{% if artefact.title.size < 10 %}
+		{% include /functions/define-message.html ignore=artefact.ignore msgno="w690"
+				msg="Titel scheint zu kurz zu sein." %}
+		{% assign warningList = warningList | push: out_msg %}
+	{% endif %}
+{% else %}
+	{% include /functions/define-message.html ignore=artefact.ignore msgno="e691" msg="Titel fehlt!" %}
+	{% assign errorList = errorList | push: out_msg %}
+{% endif %}
+
+
+{% comment %}---------- iWantTo -----------{% endcomment %}
+{% if artefact.iWantTo %}
+	{% if artefact.iWantTo.size < 15 %}
+		{% include /functions/define-message.html ignore=artefact.ignore msgno="w692"
+				msg="'iWantTo' scheint zu kurz zu sein." %}
+		{% assign warningList = warningList | push: out_msg %}
+	{% endif %}
+{% else %}
+	{% include /functions/define-message.html ignore=artefact.ignore msgno="e693" msg="'iWantTo' fehlt!" %}
+	{% assign errorList = errorList | push: out_msg %}
+{% endif %}
+
+
+{% comment %}---------- forThisReason -----------{% endcomment %}
+{% if artefact.forThisReason %}
+	{% if artefact.forThisReason.size < 15 %}
+		{% include /functions/define-message.html ignore=artefact.ignore msgno="w694"
+				msg="'forThisReason' scheint zu kurz zu sein." %}
+		{% assign warningList = warningList | push: out_msg %}
+	{% endif %}
+{% else %}
+	{% include /functions/define-message.html ignore=artefact.ignore msgno="e695" msg="'forThisReason' fehlt!" %}
+	{% assign errorList = errorList | push: out_msg %}
+{% endif %}
+
 
 {% assign errorString = errorList | join: ";" %}
 {% assign warningString = warningList | join: ";" %}
