--- a/_layouts/userStory.html
+++ b/_layouts/userStory.html
@@ -10,17 +10,6 @@ layout: default
     {% include /functions/resolve-names.html myResponsible=page.responsible %}
     <dd>{{ responsibleString }}</dd>
 
-    <dt>Als</dt>
-    {% include /functions/get-link-to-artefact.html myRef=page.asA myTypeString="stakeholderRole"
-            myIdFormat="none" %}
-    <dd>{{ artefactLink }}</dd>
-
-    <dt>möchte ich</dt>
-    <dd>{{ page.iWantTo }}</dd>
-
-    <dt>damit</dt>
-    <dd>{{ page.forThisReason }}</dd>
-
     {% include /functions/print-history.html myArtefact=page %}
 
     {% include /functions/checks/check-userStory.html myArtefact=page %}
@@ -28,6 +17,19 @@ layout: default
 
     {% include /functions/print-detailed-check-messages.html errors=errorString warnings=warningString todos=page.todo %}
 </dl>
+
+
+<H2>Text der User Story</H2>
+
+<dt>Als</dt>
+{% include /functions/get-link-to-artefact.html myRef=page.asA myTypeString="stakeholderRole" myIdFormat="none" %}
+<dd>{{ artefactLink }}</dd>
+
+<dt>möchte ich</dt>
+<dd>{{ page.iWantTo }}</dd>
+
+<dt>damit</dt>
+<dd>{{ page.forThisReason }}</dd>
 
 
 {{ page.content }}
