--- a/_includes/functions/checks/check-useCaseDiagram.html
+++ b/_includes/functions/checks/check-useCaseDiagram.html
@@ -7,14 +7,15 @@
 
 {% include /functions/checks/generic/check-generic-aspects.html myArtefact=artefact
 		myErrorString="" myWarningString="" %}
+{% include /functions/checks/generic/check-generic-refs.html myArtefact=artefact myCheckedRef=artefact.functionalRequirement
+		myCheckedRefType="functionalRequirement" asList=false emptyMeansError=true
+		myPurpose="zugehörige funktionale Anforderung" myErrorString=errorString myWarningString=warningString %}
 
 {% assign errorList = errorString | split: ";" %}
 {% assign warningList = warningString | split: ";" %}
 
 
 {% comment %} ***** Error/Warning Numbers 650 - 669 reserved for UC Diagram **** {% endcomment %}
-
-{% comment %}---------- functionalRequirement -----------{% endcomment %}
 
 {% comment %}---------- useCases -----------{% endcomment %}
 
