added page navigation

--- a/_layouts/goal.html
+++ b/_layouts/goal.html
@@ -2,6 +2,22 @@
 layout: default
 ---
 
+{% if site.teacherMode == true %}
+<div class="teachergrid">
+    <button onclick="setGrading()">0</button>
+    <button onclick="setGrading()">0,5</button>
+    <button onclick="setGrading()">1</button>
+    <button onclick="setGrading()">1,5</button>
+    <button onclick="setGrading()">2</button>
+    <button onclick="setGrading()">2,5</button>
+    <button onclick="setGrading()">3</button>
+    <a id="results">Download CSV</a><br>
+</div>
+{% endif %}
+
+
+
+
 {% include /functions/get-artefact-name.html myArtefact=page myIdFormat="postfixWithBrackets" %}
 {% if page.isTopLevel %}
     <h1>Hauptziel {{ artefactName }}</h1>
@@ -9,6 +25,7 @@ layout: default
     <h1>Unterziel {{ artefactName }}</h1>
 {% endif %}
 
+{% include /functions/print-page-navigation.html myArtefact=page %}
 
 <dl>
     <dt>Autor(en)</dt>
