--- a/_layouts/scenario.html
+++ b/_layouts/scenario.html
@@ -5,6 +5,8 @@ layout: default
 {% include /functions/get-artefact-name.html myArtefact=page myIdFormat="postfixWithBrackets" %}
 <h1>Szenario {{ artefactName }}</h1>
 
+{% include /functions/print-page-navigation.html myArtefact=page %}
+
 <p>tbd. Szenariotyp</p>
 
 <dl>
