--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -239,3 +239,11 @@ dd {
   background-color: #eee;
   color: black;
 }
+
+.teachergrid {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+}
