--- a/_includes/functions/get-globalid.html
+++ b/_includes/functions/get-globalid.html
@@ -1,8 +1,15 @@
 {% assign artefact = include.myArtefact %}
 
+{% comment %} List of output vars {% endcomment %}
+{% assign globalId = "XX-??" %}
+{% assign prevLink = "" %}
+{% assign firstLink = "" %}
+{% assign nextLink = "" %}
+{% assign lastLink = "" %}
+{% assign topLink = "" %}
+
 {% assign type = artefact.type  %}
 {% assign typeMetadata = site.data.metadata[type] %}
-
 {% if typeMetadata %}
     {% assign prefix = typeMetadata.prefix %}
     {% assign sortField = typeMetadata.sortField %}
@@ -25,6 +32,19 @@
     {% endfor %}
 
     {% assign globalId = index | prepend: "-" | prepend: prefix %}
-{% else %}
-    {% assign globalId = "XX-??" %}
+    {% if index > 1 %}
+        {% assign prevIndex = index | minus: 2 %}
+        {% assign prevItem = collection[prevIndex] %}
+        {% assign firstItem = collection[0] %}
+        {% capture prevLink %}{{ site.url }}{{ prevItem.url | relative_url }}{% endcapture %}
+        {% capture firstLink %}{{ site.url }}{{ firstItem.url | relative_url }}{% endcapture %}
+    {% endif %}
+    {% if index < collection.size %}
+        {% assign lastIndex = collection.size | minus: 1  %}
+        {% assign nextItem = collection[index] %}
+        {% assign lastItem = collection[lastIndex] %}
+        {% capture nextLink %}{{ site.url }}{{ nextItem.url | relative_url }}{% endcapture %}
+        {% capture lastLink %}{{ site.url }}{{ lastItem.url | relative_url }}{% endcapture %}
+    {% endif %}
+    {% capture topLink %}{{ site.url }}{{ "/overview/" | append: collectionName | append: ".html" | relative_url }}{% endcapture %}
 {% endif %}
