--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  {% include /functions/print-js-teachermode.html %}
 </head>
 <body>
 
@@ -83,6 +84,8 @@
       </div>
   </div>
 </div>
+
+
 
 
 <div class="wrapper">
