--- a/_layouts/interview.html
+++ b/_layouts/interview.html
@@ -7,6 +7,8 @@ layout: default
 {% include /functions/get-artefact-name.html myArtefact=page myIdFormat="postfix" %}
 <h1>{{ artefactName }}</h1>
 
+{% include /functions/print-page-navigation.html myArtefact=page %}
+
 <dl>
     <dt>Acronym</dt>
     <dd>{{ page.acronym }}</dd>
