--- a/_layouts/systemContextElement.html
+++ b/_layouts/systemContextElement.html
@@ -6,6 +6,8 @@ layout: default
 {% include /functions/get-system-context-subtype.html mySystemContextElement=page %}
 <h1>Systemkontext: {{ subTypeString }} {{ artefactName }}</h1>
 
+{% include /functions/print-page-navigation.html myArtefact=page %}
+
 <dl>
     <dt>Autor(en)</dt>
     {% include /functions/resolve-names.html myResponsible=page.responsible %}
