--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -5,6 +5,8 @@ layout: default
 {% include /functions/get-artefact-name.html myArtefact=page myIdFormat="postfixWithBrackets" %}
 <h1>Workshop {{ artefactName }}</h1>
 
+{% include /functions/print-page-navigation.html myArtefact=page %}
+
 <dl>
     <dt>Acronym</dt>
     <dd>{{ page.acronym }}</dd>
