--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   {% seo %}
   <link rel="stylesheet" href="{{ site.url }}{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-  <script src="{{ site.url }}{{ '/assets/js/respond.js' | relative_url }}"></script>
+  <!--<script src="{{ site.url }}{{ '/assets/js/respond.js' | relative_url }}"></script>-->
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -18,7 +18,16 @@
 
   {% include /functions/print-js-teachermode.html %}
 </head>
-<body>
+
+{% if site.teacherMode == true %}
+  {% if page != Nil %}
+    {% assign localKey = page.type | append: ";" | append: page.acronym %}
+      <body onload="colorSelection( '{{ localKey }}' )">
+  {% endif %}
+{% else %}
+  <body>
+{% endif %}
+
 
 <div class="navbar">
 
