--- a/_layouts/functionalRequirement.html
+++ b/_layouts/functionalRequirement.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+{% include /functions/print-teacherbuttons.html myArtefact=page %}
 
 {% include /functions/get-artefact-name.html myArtefact=page myIdFormat="postfixWithBrackets" %}
 <h1>Funktionale Anforderung {{ artefactName }}</h1>
