--- a/_layouts/systemContextElement.html
+++ b/_layouts/systemContextElement.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% include /functions/print-teacherbuttons.html myArtefact=page %}
+
 {% include /functions/get-artefact-name.html myArtefact=page myIdFormat="postfixWithBrackets" %}
 {% include /functions/get-system-context-subtype.html mySystemContextElement=page %}
 <h1>Systemkontext: {{ subTypeString }} {{ artefactName }}</h1>
