--- a/_layouts/useCaseDiagram.html
+++ b/_layouts/useCaseDiagram.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% include /functions/print-teacherbuttons.html myArtefact=page %}
+
 {% include /functions/get-artefact-name.html myArtefact=page myIdFormat="postfix" %}
 <h1>{{ artefactName }}</h1>
 
