--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -100,7 +100,7 @@ footer {
   height: 40px;
   width: 100%;
   position: fixed;
-  background: url(../images/nav-bg.gif) #353535;
+  background: #353535;
   border-top: 4px solid #434343;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, .25);
   display: inline-block;
@@ -242,11 +242,11 @@ dd {
 
 .teachergrid {
   display: grid;
-  grid-template-columns: repeat(11, 1fr);
+  grid-template-columns: repeat(10, 1fr);
   grid-column-gap: 10px;
   grid-row-gap: 10px;
 }
-.teacherbutton {
+.teachergrid button {
   background-color: #e0e0e0;
   border: none;
   color: black;
@@ -257,4 +257,7 @@ dd {
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
+}
+.teachergrid p {
+  font-size: 8px;
 }
